--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <!-- hidden form to netlify -->
-      <form name="contact-form" data-netlify="true" hidden>
+      <form name="contact-form" data-netlify="true" netlify-honeypot="bot-field" hidden>
              <input type="text" name="name"/>
               <input type="email" name="email"/>
               <textarea name="message"></textarea>
